--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 			<div id="menubar1"></div>
 			<div id="menubar2"></div>
 		</div>
-		<p onclick="home(0)">BUKANT</p>
+		<div class="logo">
+			<img onclick="window.open('index.html','_parent')" src="asset/icon/logoMain" alt="Bukant Logo">
+		</div>
 		<div id="cartIconContainer" onclick="accessCart(1)">
 			<div id="cartCounter">
 				<p id="cartCounterDisplay"></p>
@@ -90,46 +92,33 @@
 
 			<div class="rails">
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="१९८६ वास हराएपछि">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
-							<p>Rs. 150</p>
+							<p>Rs. 300</p>
 						</div>
 						<div class="bookDetailBeta">
-							<button class="bookButton" onclick="window.open('page/books/book.html','_parent')">View</button>
+							<button class="bookButton" onclick="window.open('page/books/1986-bas-harayepachi.html','_parent')">View</button>
 							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
 						</div>
 					</div>
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/colours-of-kanchenjunga" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
-							<p>Rs. 150</p>
+							<p>Rs. 399</p>
 						</div>
 						<div class="bookDetailBeta">
-							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="window.open('page/books/colours-of-kanchenjunga.html','_parent')">View</button>
 							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
 						</div>
 					</div>
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
-					<div class="bookDetail">
-						<div class="bookDetailAlpha">
-							<p>Rs. 150</p>
-						</div>
-						<div class="bookDetailBeta">
-							<button class="bookButton">View</button>
-							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -142,7 +131,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -155,7 +144,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -168,7 +157,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -181,7 +170,20 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
+					<div class="bookDetail">
+						<div class="bookDetailAlpha">
+							<p>Rs. 150</p>
+						</div>
+						<div class="bookDetailBeta">
+							<button class="bookButton">View</button>
+							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -202,7 +204,7 @@
 			<div class="rails">
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -215,7 +217,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -228,7 +230,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -241,7 +243,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -254,7 +256,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -274,7 +276,7 @@
 			<div class="rails">
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -287,7 +289,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -300,7 +302,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -313,7 +315,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -326,7 +328,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -346,7 +348,7 @@
 			<div class="rails">
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -359,7 +361,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -372,7 +374,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -385,7 +387,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -398,7 +400,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -418,7 +420,7 @@
 			<div class="rails">
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -431,7 +433,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -444,7 +446,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -457,7 +459,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -470,7 +472,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -490,7 +492,7 @@
 			<div class="rails">
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -503,7 +505,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -516,7 +518,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -529,7 +531,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
@@ -542,7 +544,7 @@
 				</div>
 
 				<div class="card">
-					<div class="bookCover"></div>
+					<img class="bookCover" src="asset/books/1986-bas-harayepachi" alt="">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 150</p>
